inserted the cover of the song

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="bigpart"></div>
     <p class="music_player ">music player</p>
+    <img class ="image" src="./album.jpg" alt="song cover">
 
   
     
