made some small changes in the previous steps

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div class="bigpart"></div>
+    <div class="bigpart">
     <p class="music_player ">music player</p>
     <img class ="image" src="./album.jpg" alt="song cover">
 
-  
+</div>
     
 </body>
 
