typed the song's name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bigpart">
     <p class="music_player ">music player</p>
     <img class ="image" src="./album.jpg" alt="song cover">
-
+    <p class="songname"> it is easy </p>
 </div>
     
 </body>
