--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p class="music_player ">music player</p>
     <img class ="image" src="./album.jpg" alt="song cover">
     <p class="songname"> it is easy </p>
+    <p class="songwriter"> Bihes Ft.Melika</p>
 </div>
     
 </body>
