inserted the song slider and the timing ' q
'
''

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <img class ="image" src="./album.jpg" alt="song cover">
     <p class="songname"> it is easy </p>
     <p class="songwriter"> Bihes Ft.Melika</p>
+    <span class="current-time">00:00</span>
+            <span class="song-duration">03:49</span>
+            <div class="song-slider">
+    <input type="range" value="90" class="seek-bar">
 </div>
     
 </body>
