inserted the buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <span class="song-duration">03:49</span>
             <div class="song-slider">
     <input type="range" value="90" class="seek-bar">
+    <div><ul class="Buttoms">
+        <button class="back fas fa-backward"></button>
+        <button class="play fas fa-play"></button>
+        <button class="for fas fa-forward" ></button>
+        
+    </ul>
 </div>
     
 </body>
